--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,9 @@
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Buscar">
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
+              <button type="submit" class="btn btn-default">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
             </form>
           </div>
         </div>
