--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,14 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="rainhaApp">
+  <body ng-app="rainhaApp" ng-controller="Appcontroller">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -42,6 +43,7 @@
               <li><a href="#/">Home</a></li>
               <li><a ng-href="#/sobre">Sobre</a></li>
               <li><a ng-href="#/contato">Contato</a></li>
+              <li><a ng-href="#/login">Login</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
@@ -51,6 +53,9 @@
                 <span class="glyphicon glyphicon-search"></span>
               </button>
             </form>
+            <ul class="nav navbar-nav navbar-right" ng-if="usuarioLogado">
+              <li><a href="" ng-click="logout()">Olá {{usuarioLogado.nome}} (SAIR)</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -59,7 +64,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2">
-          <div class="panel panel-success">
+          <div class="panel panel-success" ng-if="showMenuAdmin === false">
             <div class="panel-heading">
               <strong>Categorias</strong>
             </div>
@@ -68,6 +73,18 @@
                 <li role="presentation"><a href="#">Home</a></li>
                 <li role="presentation"><a href="#">Profile</a></li>
                 <li role="presentation"><a href="#">Messages</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="panel panel-success" ng-if="showMenuAdmin === true">
+            <div class="panel-heading">
+              <strong>Menu Administrativo</strong>
+            </div>
+            <div class="panel-body">
+              <ul class="nav nav-pills nav-stacked">
+                <li role="presentation"><a href="#/admin">Principal</a></li>
+                <li role="presentation"><a href="#/cadProduto">Cadastro de Produtos</a></li>
+                <li role="presentation"><a href="#">Cadastro de Destaques</a></li>
               </ul>
             </div>
           </div>
@@ -109,6 +126,12 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-base64-upload/src/angular-base64-upload.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
+    <script src="bower_components/br-validations/releases/br-validations.js"></script>
+    <script src="bower_components/string-mask/src/string-mask.js"></script>
+    <script src="bower_components/angular-input-masks/angular-input-masks-standalone.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -118,6 +141,14 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contato.js"></script>
         <script src="scripts/controllers/produto.js"></script>
+        <script src="scripts/services/authservice.js"></script>
+        <script src="scripts/controllers/admin.js"></script>
+        <script src="scripts/controllers/appcontroller.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/services/usuariomodel.js"></script>
+        <script src="scripts/services/produtoservice.js"></script>
+        <script src="scripts/services/produtomodel.js"></script>
+        <script src="scripts/controllers/cadproduto.js"></script>
         <!-- endbuild -->
 </body>
 </html>
