--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/angular-growl-v2/build/angular-growl.css" />
+    <link rel="stylesheet" href="bower_components/v-accordion/dist/v-accordion.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -47,11 +48,11 @@
               <li><a ng-href="#/contato">Contato</a></li>
               <li><a ng-href="#/login">Login</a></li>
             </ul>
-            <form class="navbar-form navbar-right" role="search">
+            <form class="navbar-form navbar-right" role="search" name="frmBusca" ng-submit="busca()">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Buscar">
+                <input type="text" class="form-control" placeholder="Buscar" ng-model="produtoBusca.descricao" required="required">
               </div>
-              <button type="submit" class="btn btn-default">
+              <button type="submit" class="btn btn-default" ng-disabled="frmBusca.$invalid">
                 <span class="glyphicon glyphicon-search"></span>
               </button>
             </form>
@@ -66,18 +67,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2">
-          <div class="panel panel-success" ng-if="showMenuAdmin === false">
-            <div class="panel-heading">
-              <strong>Categorias</strong>
-            </div>
-            <div class="panel-body">
+          <accordion>
+            <accordion-group ng-repeat="c in listaCategorias" heading="{{c.descricao}}">
               <ul class="nav nav-pills nav-stacked">
-                <li role="presentation"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">Profile</a></li>
-                <li role="presentation"><a href="#">Messages</a></li>
+                <li role="presentation" ng-repeat="s in c.subcategorias"><a href="" ng-click="buscaSubcategoria(s.id)">{{s.descricao}}</a></li>
               </ul>
-            </div>
-          </div>
+            </accordion-group>
+          </accordion>
           <div class="panel panel-success" ng-if="showMenuAdmin === true">
             <div class="panel-heading">
               <strong>Menu Administrativo</strong>
@@ -86,7 +82,8 @@
               <ul class="nav nav-pills nav-stacked">
                 <li role="presentation"><a href="#/admin">Principal</a></li>
                 <li role="presentation"><a href="#/cadProduto">Cadastro de Produtos</a></li>
-                <li role="presentation"><a href="#">Cadastro de Destaques</a></li>
+                <li role="presentation"><a href="#/cadCategoria">Cadastro de Categoria</a></li>
+                <li role="presentation"><a href="#/cadSubcategoria">Cadastro de Subcategoria</a></li>
               </ul>
             </div>
           </div>
@@ -135,6 +132,8 @@
     <script src="bower_components/string-mask/src/string-mask.js"></script>
     <script src="bower_components/angular-input-masks/angular-input-masks-standalone.min.js"></script>
     <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
+    <script src="bower_components/v-accordion/dist/v-accordion.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -152,6 +151,11 @@
         <script src="scripts/services/produtoservice.js"></script>
         <script src="scripts/services/produtomodel.js"></script>
         <script src="scripts/controllers/cadproduto.js"></script>
+        <script src="scripts/controllers/cadcategoria.js"></script>
+        <script src="scripts/services/categoriaservice.js"></script>
+        <script src="scripts/services/modalservice.js"></script>
+        <script src="scripts/controllers/cadsubcategoria.js"></script>
+        <script src="scripts/controllers/busca.js"></script>
         <!-- endbuild -->
 </body>
 </html>
