--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,14 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
+      <div class="row" style=" background-color: #EBE0E2;">
+        <div class="col-sm-12">
+          <div class="pull-right">
+            <h5 class="text-danger" style="padding-right: 10px;"><span class="glyphicon glyphicon-phone-alt"></span> (66) 3468-1689 ou vendas@rainhainfo.com.br</h5>
+          </div>
+        </div>
+      </div>
+      <div class="navbar navbar-default navbar-custom" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
 
@@ -67,7 +74,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2">
-          <accordion>
+          <accordion ng-if="!showMenuAdmin === true">
             <accordion-group ng-repeat="c in listaCategorias" heading="{{c.descricao}}">
               <ul class="nav nav-pills nav-stacked">
                 <li role="presentation" ng-repeat="s in c.subcategorias"><a href="" ng-click="buscaSubcategoria(s.id)">{{s.descricao}}</a></li>
@@ -84,6 +91,7 @@
                 <li role="presentation"><a href="#/cadProduto">Cadastro de Produtos</a></li>
                 <li role="presentation"><a href="#/cadCategoria">Cadastro de Categoria</a></li>
                 <li role="presentation"><a href="#/cadSubcategoria">Cadastro de Subcategoria</a></li>
+                <li role="presentation"><a href="#/cadUsuario">Cadastro de Usuário</a></li>
               </ul>
             </div>
           </div>
@@ -95,9 +103,19 @@
 
     </div>
 
-    <div class="footer">
+    <div class="footer footer-custom">
       <div class="container-fluid">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <div class="row">
+          <div class="col-sm-12">
+            <h5 class="text-center">Rainha Info - {{ano}}</h5>
+            <h5 class="text-center">contato@rainhainfo.com.br</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <h6 class="text-center pull-right">Developed with <span class="glyphicon glyphicon-heart"></span> by ngTeam</h6>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -134,6 +152,8 @@
     <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
     <script src="bower_components/v-accordion/dist/v-accordion.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/tinymce-dist/tinymce.min.js"></script>
+    <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -156,6 +176,8 @@
         <script src="scripts/services/modalservice.js"></script>
         <script src="scripts/controllers/cadsubcategoria.js"></script>
         <script src="scripts/controllers/busca.js"></script>
+        <script src="scripts/controllers/cadusuario.js"></script>
+        <script src="scripts/services/usuarioservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
